# sendgrid-cli

./: .env.dist  README.md  pyproject.toml
sendgrid_cli/: app.py
